<resources>
    <string name="app_name">Internship</string>
    <string name="first_slide_title">Business Transformations</string>
    <string name="second_slide_title">Desired Job</string>
    <string name="third_slide_title">Employee Attendance</string>
    <string name="forth_slide_title">Suitable Candidate</string>
    <string name="fifth_slide_title">All HR Services</string>
    <string name="sixth_slide_title">Best Talent</string>
    <string name="seventh_slide_title">Helping Hand</string>
    <string name="eigth_slide_title">Understand Needs</string>
    <string name="first_slide_desc">Bring quantum change to your organisation by subscribing to SuccessR HR services and reach new heights of success with SuccessR</string>
    <string name="second_slide_desc">Formulate the best resume by subscribing to SuccessR and improve your CV from industry experts in HR.</string>
    <string name="third_slide_desc">Our services include keeping a track of employee attendences. We will assist you with a time log on a day to day basis to keep a check on Employee Absenteeism and lateness in the organisation.</string>
    <string name="forth_slide_desc">Facing difficulties in finding the right individual for the job ? Join us and we will help you by providing the most suitable candidate for the job.</string>
    <string name="fifth_slide_desc">SuccessR provides best in class workforce solutions to organisations, colleges and individuals alike. We are your one stop shop for a gamut of high impact HR solutions to organisations and candidates seeking growth , performance and management.</string>
    <string name="sixth_slide_desc">Sourcing the best talent, especially when a business is looking for a specific skillset in a particular field like the IT domain, can often seem to be an arduous task. Elite performers in this field can act as game-changers for any organization that is lucky enough to have them onboard</string>
    <string name="seventh_slide_desc">SuccessR understands how crucial it is to find the right employee with the right skill sets who can contribute to success of your business.</string>
    <string name="eigth_slide_desc">SuccessR understands how crucial it is to find the right employee with the right skill sets who can contribute to success of your business.</string>
    <string name="success_title">Choice Box</string>
    <string name="dummy_text">Please select one of the following</string>
    <string name="intern">Intern</string>
    <string name="employee">Employee</string>
    <string name="employer">Employer</string>
    <string name="welcome_back_to_successr">Welcome Back to SuccessR</string>
    <string name="sign_in_to_continue">Sign In to continue</string>
    <string name="reset_password">Reset Password?</string>
    <string name="new_user_sign_up">New User? SIGN UP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="skip">Skip</string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="welcome_to_successr">Welcome To successR</string>
    <string name="one_stop_destination_n_for_all_hr_services">One Stop Destination\n For All HR Services</string>
    <string name="no_of_attempts_remaining">No of attempts remaining</string>
    <string name="already_registered_login">Already Registered ? Login</string>
    <string name="sign_up">Sign up</string>
    <string name="one_step_solution_for_all_employment_services">One step solution for all employment services</string>
    <string name="signup_here">SignUp Here</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_no">Phone no.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="important_notifications">Important Notifications</string>
    <string name="name">Name</string>
    <string name="date">Date:</string>
    <string name="Campus">Campus</string>
    <string name="Job_Seeker">Job Seeker</string>
    <string name="Recruiter">Recriuter</string>
    <string name="status">Status</string>
    <string name="search_job_here">Search job here...</string>
    <string name="build_your_resume">Build Your Resume</string>
    <string name="enter_details_for_resume">Enter Details For Resume</string>
    <string name="address">Address</string>
</resources>
