<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".employeelogin"
    android:orientation="vertical"
    android:background="@color/lightBackground"
    android:padding="20dp">

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heading"
        android:text="@string/welcome_back_to_successr"
        android:textColor="@color/darkBackground"
        android:textSize="24sp"
        android:transitionName="logo_text"
        tools:layout_editor_absoluteY="31dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/sign_in_to_continue"
        android:textColor="@color/peachRed"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/logo_name"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_name"
        app:layout_constraintVertical_bias="0.805">

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailaddresslg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/emicon"
                android:drawablePadding="10dp"
                android:fontFamily="@font/montserrat_regular" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout

            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordlg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/passicon"
                android:drawablePadding="10dp"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/pbarlogin"
            style="@style/SpinKitView.Large.DoubleBounce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/resetpassword"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/reset_password" />

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/dialog_background"
            android:fontFamily="@font/heading"
            android:gravity="center"
            android:text="Log in"
            android:textColor="#fff" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:background="@android:color/transparent"
            android:elevation="0dp"
            android:text="@string/new_user_sign_up"
            android:textColor="@color/darkBackground" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/interngooglelogin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="70dp"
                android:src="@drawable/googlelogo" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="80dp"
                android:src="@drawable/facebooklogo" />
        </LinearLayout>

        <TextView
            android:id="@+id/attemptremaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginTop="40dp"
            android:text="No of attempts remaining"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>